--- a/PETSHOP FINAL/assets/styles/style.css
+++ b/PETSHOP FINAL/assets/styles/style.css
@@ -151,6 +151,40 @@ footer{
 .border-verdeO{
     border: 3px solid var(--verde-oscuro);
 }
+
+.submenu{
+    position: fixed;
+    z-index: 60;
+    right: 5%;
+    bottom: 70%;
+}
+
+.submenu img{
+    height: 7rem;
+}
+
+.submenu #carrito{
+    display: none;
+}
+.submenu:hover #carrito{
+    display: block;
+    position: absolute;
+    right:0;
+
+    top:100%;
+    z-index: 1;
+    background-color: white;
+    padding: 20px;
+    min-height: 400px;
+    max-height: 650px;
+    min-width: 300px;
+}
+
+#carrito{
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
 @media (max-width:1023px){
     #mancha1{
         height: 30vh;
@@ -189,6 +223,18 @@ footer{
         height: 300px;
     }
 }
+
+@media (max-width:363px){
+    #mancha1{
+        height: 25vh;
+    }
+
+    #mapa{
+        width: 250px;
+        height: 250px;
+    }
+}
+
 @-webkit-keyframes animarNav{
     0%{-webkit-transform:rotate(0deg);}
     7%{-webkit-transform:rotate(10deg);}
