--- a/PETSHOP FINAL/assets/styles/style.css
+++ b/PETSHOP FINAL/assets/styles/style.css
@@ -98,16 +98,24 @@ body{
 }
 header{
     min-height: 11vh;
+    background-color: var(--verde-oscuro);
+    display: flex;
+    align-items: center;
 }
 nav{
+    display: flex;
+    justify-content: center;
     position:fixed !important;
     width: 100% !important;
     top: 0;
     z-index: 20;
     padding: 0 !important;
+    align-self: center;
+    box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.31);
 }
 main{
     min-height: 78vh;
+    margin-top: 0 !important;
 }
 footer{
     min-height: 11vh;
@@ -297,7 +305,9 @@ footer{
     height: 20%;
 }
 .cardCL .back .descripcion{
-    font-size: 1.1rem;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: .9rem;
+    font-weight: 900;
     height: 70%;
     text-shadow: 1px 1px 1px black;
 }
@@ -319,3 +329,13 @@ footer{
 }
 
 /* ACA TERMINA ESTILOS DE CARDS */
+#arriba{
+    position: fixed;
+    right: 2vw;
+    bottom: 12vh;
+    transition: all .5s linear;
+    opacity: .5;
+}
+#arriba:hover{
+    opacity: 1;
+}
